# mpp-solar

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CHARTS_README.md  CHART_DESIGN_PHILOSOPHY.md  CHART_FIXES_CONTEXT.md  CHART_FIXES_CYCLES.md  CHART_FIXES_IMPLEMENTATION_PLAN.md  CHART_FIXES_PROGRESS.md  CLAUDE.md  CONTEXT.md  CYCLE_6.md  CYCLE_6_AI_HANDOFF.md  CYCLE_6_TEST_CHECKLIST.md  CYCLE_6_TEST_PLAN.md  CYCLE_6_TEST_RESULTS.md  DAEMON_README.md  Dockerfile  Dockerfile.development  IMPLEMENTATION_PLAN.md  LCARS_COMPLETE_README.md  LCARS_README.md  LICENSE  MANIFEST.in  PROGRESS.md  PROJECT_README.md  PROMETHEUS_EXPORT_README.md  README.md  SETUP_GUIDE.md  WEB_INTERFACE_README.md  ZEROTIER-README.md  ble-scratch.py  claude.md  claude_rob.md  config.py  cursor.md  daly.yaml  decode.py  (+34 more)
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  python-publish.yml
ESP32_tools/: crosstool_1-1_armhf.deb
api/: Dockerfile.development  LICENSE  README.md  index.js  mpp-solar.config  package.json  requirements.txt  uwsgi.ini
api/app/: __init__.py  main.py  mqtthandler.py  statehandler.py  views.py
daemon/: README.md  jkbms.conf.example  jkbms.service  mpp-solar.conf.example  mpp-solar.service
docker/: mpp-solar.conf  powermon.yaml
docker/dev/: Dockerfile  docker-compose.yaml
docker/dev-min/: Dockerfile
docker/prod/: Dockerfile  docker-compose.yaml
docs/: DOCUMENTATION_INDEX.md  IMPLEMENTATION_PLAN.md  MQTT_Influx_Grafana.md  PI16_VoltronicPowerSUNNYProtocol.md  PROGRESS.md  README.md  bleak.md  configfile.md  daemon.md  docker.md  hardware.md  installation.md  interface.md  mqtt_configuration.md  pi16-VoltronicPowerSUNNYProtocol.md  postgres.md  service-README.md  troubleshooting.md  ubuntu_install.md  usage.md  venv.md
docs/archive/: CHANGELOG_HOUSE_LOCALSTORAGE.md  CHARTS_FILTERING_FIX.md  CONTEXT.md  FIXES_APPLIED.md  HOUSE_DATA_DIAGNOSIS.md  HOUSE_HISTORICAL_IMPLEMENTATION.md  HOUSE_MQTT_SETUP.md  HOUSE_PAGE_FIXES.md  HOUSE_PAGE_LOCALSTORAGE.md  HOUSE_VS_CHARTS_COMPARISON.md  QUICK_START_HISTORICAL.md  REBUILD_FROM_SCRATCH.md  REVIEW_SUMMARY.md  TEST_HISTORICAL_LOADING.md  TIME_RANGE_FEATURE.md  WEATHER_CONDITION_SUMMARY.md  WEEKLY_FILTER_EXTENSION.md
docs/protocols/: PI30_Q1 definition.md
docs/service/: Dockerfile  mpp-solar.conf.example  mpp-solar.service  receive-commands.conf
dto/: commandScheduleDTO.py  deviceDTO.py  portDTO.py  powermonDTO.py  protocolDTO.py  scheduleDTO.py
fastapi/: Dockerfile.development  sql_app.db
fastapi/app/: main.py  mqtthandler.py
mppsolar/: __init__.py  __main__.py  all_commands.py  daemon_cli.py  helpers.py  main.py  mpp-solar-service.py  mpp-test.py  mpp_info_pub.py  mpp_solar_service.py  mppcommand.py  mppcommands.py  mppinverter.py  mpprun.py  mpptest.py  mpputils.py  powermon.py  pyinstaller_runtime.py  timer.py  version.py
mppsolar/_old/: jk24s.py  mpp_solar_service.py  mppinverter.py  mpputils.py
mppsolar/commands/: _pi18_et.json  _pi18_gs.json  _pi18_mod.json  _pi18_pi.json  convert2py.py  f.json  id.json  invalid.json  mchgc.json  mnchgc.json  muchgc.json  pbcv.json  pbdv.json  pbft.json  pbt.json  pcp.json  pcvv.json  pepd.json  pf.json  pgr.json  pop.json  popm.json  ppcp.json  ppvokc.json  psdv.json  pspb.json  q1.json  qboot.json  qdi.json  qflag.json  qgmn.json  qid.json  qmchgcr.json  qmn.json  qmod.json  qmuchgcr.json  qopm.json  qp2gs.json  qpgs-lv.json  qpgs.json  (+9 more)
mppsolar/daemon/: __init__.py  daemon.py  daemon_disabled.py  daemon_openrc.py  daemon_systemd.py  pyinstaller_runtime.py
mppsolar/devices/: device.py  jk24s.py  jkbms.py  mppsolar.py
powermon/: __init__.py  config_model.py  device.py  errors.py  powermon-hass.yaml  powermon-qed.yaml  powermon-qpigs.yaml  powermon.yaml  version.py
powermon-api/: __init__.py  api.py
powermon_api/: __init__.py  api.py
templates/: battery.html  charts.html  charts_lcars.html  dashboard.html  dashboard_lcars.html  house.html
tests/: __init__.py  test_cmd_mppsolar.py  test_cmd_powermon.py  test_cmd_powermon_pi30.py  test_cmd_powermon_pi30max.py  test_config_validation.py  test_daly.py  test_init.py  test_jk02.py  test_jk04.py  test_mppcommand.py  test_mppcommands.py  test_mppinverter.py  test_mpputils.py  test_output_mqtt.py  test_pi30.py  test_powermon_formats.py  test_protocol_daly.py  test_protocol_helpers.py  test_protocol_jk02.py  test_protocol_jk04.py  test_protocol_jk485.py  test_protocol_pi16.py  test_protocol_pi17.py  test_protocol_pi17m058.py  test_protocol_pi18.py  test_protocol_pi18lvx.py  test_protocol_pi18sv.py  test_protocol_pi30.py  test_protocol_pi30max.py  test_protocol_pi30mst.py  test_protocol_ved.py
utils/: ble-chars.py  ble-scan.py  calc_crc.py  jk.py  log-boot.sh  mqtt_pub.py  mqtt_sub.py  mqtt_test.py  reboot.sh  script.py  victron-ble.py  zerotier-health-check.sh  zt-status.sh
(+334 files in other folders)
