[tool.poetry]
name = "mppsolar"
version = "0.16.31"
description = "Package to communicate with Solar inverters and BMSs"
authors = ["John Blance"]
readme = "README.md"
packages = [
    {include = "mppsolar"},
]

[tool.poetry.dependencies]
python = ">=3.10,<4.00"
paho-mqtt = ">=1.6,<2.0.0"
pyserial = ">3"
pydantic = ">=1.8.0"

# Extra dependencies
bluepy = { version = "^1.3.0", optional = true }
cysystemd = { version = ">=1.6.0", optional = true }
# paho-mqtt = { version = ">=1.6", optional = true }
pymongo = { version = ">=4.6.1", optional = true }
psycopg2-binary = { version = ">=2.9.9", optional = true }
pymodbus = { version = "^3.6.4", optional = true }

[tool.poetry.extras]
ble = ["bluepy"]
dev = ["bluepy", "pymodbus"]
# mqtt = ["paho-mqtt"]
mongo = ["pymongo"]
pgsql = ["psycopg2-binary"]
systemd = ["cysystemd"]
modbus = ["pymodbus"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mpp-solar = "mppsolar:main"
mppsolar = "mppsolar:main"
jkbms = "mppsolar:main"

[tool.black]
line-length = 149
