[tool.poetry]
name = "mppsolar"
version = "0.16.40"
description = "Package to communicate with Solar inverters and BMSs"
authors = ["John Blance"]
readme = "README.md"
packages = [
    {include = "mppsolar"},
]

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = ">=1.6,<2.0.0"
pyserial = ">3"
pydantic = ">=1.8.0"

# Extra dependencies
bluepy = { version = "^1.3.0", optional = true }
# paho-mqtt = { version = ">=1.6", optional = true }
pymongo = { version = ">=4.6.1", optional = true }
psycopg2-binary = { version = ">=2.9.9", optional = true }
pymodbus = { version = ">=3.6.1", optional = true }
#cysystemd = [
#    { optional = true, url = "https://github.com/mosquito/cysystemd/releases/download/1.6.2/cysystemd-1.6.2-cp311-cp311-manylinux_2_28_aarch64.whl", markers = "platform_machine == 'aarch64'"},
#    { optional = true, url = "https://github.com/mosquito/cysystemd/releases/download/1.6.2/cysystemd-1.6.2-cp311-cp311-manylinux_2_28_x86_64.whl", markers = "platform_machine == 'x86_64'" },
#]
cysystemd = { version = "^1.6.2", optional = true }

[tool.poetry.extras]
ble = ["bluepy"]
dev = ["bluepy", "pymodbus"]
# mqtt = ["paho-mqtt"]
mongo = ["pymongo"]
pgsql = ["psycopg2-binary"]
systemd = ["cysystemd"]
modbus = ["pymodbus"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mpp-solar = "mppsolar:main"
mppsolar = "mppsolar:main"
jkbms = "mppsolar:main"

[tool.black]
line-length = 149
